# embr

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  prj.conf
.github/workflows/: run-build.yaml  run-unit-tests.yaml  run-unit-tests.yml
app/: CMakeLists.txt
app/include/: ei_wrap.h  embr_app.h  embr_app_logic.h  embr_classify.h  embr_error_id.h  embr_inference.h  embr_types.h
app/src/: ei_wrap.c  ei_wrap_stub.c  embr_app.c  embr_app_logic.c  embr_classify.c  embr_error_id.c  embr_inference.c
boards/: thingy53_nrf5340_cpuapp.overlay
docs/: edge_impulse.md  error_reporting.md  multithreading.md  power.md
platform/: CMakeLists.txt
platform/include/: dmic_wrap.h  gpio_wrap.h  kernel_wrap.h  thingy53_led.h  thingy53_led_impl.h  thingy53_led_specs.h  thingy53_mic.h  thingy53_mic_impl.h  thingy53_mic_specs.h
platform/src/: dmic_wrap.c  gpio_wrap.c  kernel_wrap.c  thingy53_led.c  thingy53_led_impl.c  thingy53_led_specs.c  thingy53_mic.c  thingy53_mic_impl.c  thingy53_mic_specs.c
scripts/: generate_docs.sh
src/: main.c
tests/unit/embr_app_logic/: CMakeLists.txt  testcase.yaml
tests/unit/embr_app_logic/src/: test_embr_app_logic.c
tests/unit/embr_classify/: CMakeLists.txt  testcase.yaml
tests/unit/embr_classify/src/: test_embr_classify.c
tests/unit/embr_error_id/: CMakeLists.txt  testcase.yaml
tests/unit/embr_error_id/src/: test_embr_error_id.c
tests/unit/embr_inference/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/embr_inference/src/: test_embr_inference.c
tests/unit/mocks/: dmic_wrap_mock.c  dmic_wrap_mock.h  ei_wrap_mock.c  ei_wrap_mock.h  embr_app_mock.c  embr_app_mock.h  gpio_wrap_mock.c  gpio_wrap_mock.h  kernel_wrap_mock.c  kernel_wrap_mock.h  thingy53_led_impl_mock.c  thingy53_led_impl_mock.h  thingy53_led_specs_mock.c  thingy53_mic_impl_mock.c  thingy53_mic_impl_mock.h  thingy53_mic_mock.c  thingy53_mic_mock.h  thingy53_mic_specs_mock.c  thingy53_mic_specs_mock.h
tests/unit/thingy53_led/: CMakeLists.txt  testcase.yaml
tests/unit/thingy53_led/src/: test_thingy53_led.c
tests/unit/thingy53_led_impl/: CMakeLists.txt  testcase.yaml
tests/unit/thingy53_led_impl/src/: test_thingy53_led_impl.c
tests/unit/thingy53_mic/: CMakeLists.txt  testcase.yaml
tests/unit/thingy53_mic/src/: test_thingy53_mic.c
tests/unit/thingy53_mic_impl/: CMakeLists.txt  testcase.yaml
tests/unit/thingy53_mic_impl/src/: test_thingy53_mic_impl.c
